--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
   "devDependencies": {
     "autoprefixer": "^6.3.7",
     "browser-sync": "^2.13.0",
+    "del": "^2.2.1",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-jshint": "^2.0.1",
+    "gulp-notify": "^2.2.0",
     "gulp-postcss": "^6.1.1",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.4",
+    "jshint": "^2.9.2",
     "postcss-import": "^8.1.2",
     "postcss-reporter": "^1.4.1"
   }
