--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.2",
     "gulp-gh-pages": "^0.5.4",
+    "gulp-inline-source": "^2.1.0",
     "gulp-jshint": "^2.0.1",
     "gulp-notify": "^2.2.0",
     "gulp-postcss": "^6.1.1",
